--- a/sprint1-React_Native/revisaoProps/package.json
+++ b/sprint1-React_Native/revisaoProps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atividade1",
+  "name": "revisaoprops",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,21 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/combo": "^0.2.3",
-    "@expo/metro-runtime": "~3.1.1",
-    "expo": "^49.0.22",
-    "expo-font": "~11.10.2",
+    "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-web": "~0.19.6"
+    "react-native": "0.73.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "rnpm": {
-    "assets": ["src/assets/fonts/Poppins"]
-   },
   "private": true
 }
