--- a/sprint1-React_Native/styledcomponents/app.json
+++ b/sprint1-React_Native/styledcomponents/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "revisaoProps",
-    "slug": "revisaoProps",
+    "name": "revisaoHooks",
+    "slug": "revisaoHooks",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,13 +25,6 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "plugins": [[
-      "expo-font",
-      {
-        
-      }
-    ]
-  ]
+    }
   }
 }
