--- a/sprint1-React_Native/viaCep/app.json
+++ b/sprint1-React_Native/viaCep/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "revisaoHooks",
-    "slug": "revisaoHooks",
+    "name": "viaCep",
+    "slug": "viaCep",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
