--- a/sprint1-React_Native/viaCep/package.json
+++ b/sprint1-React_Native/viaCep/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "revisaohooks",
+  "name": "viacep",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,15 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/poppins": "^0.2.3",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
     "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "styled-components": "^6.1.8",
-    "react-native-web": "~0.19.6",
-    "@expo/metro-runtime": "~3.1.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
