--- a/sprint1-React_Native/projeto_VitalHub/app.json
+++ b/sprint1-React_Native/projeto_VitalHub/app.json
@@ -7,9 +7,10 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "image": "./src/assets/SplashRename/img/splash.png",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
+
     },
     "assetBundlePatterns": [
       "**/*"
