--- a/sprint1-React_Native/projeto_VitalHub/package.json
+++ b/sprint1-React_Native/projeto_VitalHub/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-linear-gradient": "^2.8.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
