--- a/sprint1-React_Native/projeto_VitalHub/package.json
+++ b/sprint1-React_Native/projeto_VitalHub/package.json
@@ -18,12 +18,13 @@
     "cli": "^1.0.1",
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
+    "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-calendar-strip": "^2.2.6",
     "react-native-linear-gradient": "^2.8.3",
-    "styled-components": "^6.1.8",
-    "expo-linear-gradient": "~12.7.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
