--- a/sprint1-React_Native/projeto_VitalHub/package.json
+++ b/sprint1-React_Native/projeto_VitalHub/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.73.2",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-vector-icons": "^10.0.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
