--- a/sprint1-React_Native/projeto_VitalHub/package.json
+++ b/sprint1-React_Native/projeto_VitalHub/package.json
@@ -12,6 +12,8 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/montserrat-alternates": "^0.2.3",
     "@expo-google-fonts/quicksand": "^0.2.3",
+    "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -25,6 +27,7 @@
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1304.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-picker-select": "^9.0.1",
     "react-native-vector-icons": "^10.0.3",
     "styled-components": "^6.1.8"
   },
