--- a/sprint1-React_Native/projeto_VitalHub/package.json
+++ b/sprint1-React_Native/projeto_VitalHub/package.json
@@ -27,9 +27,12 @@
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1304.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-picker-select": "^9.0.1",
     "react-native-vector-icons": "^10.0.3",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "expo-location": "~16.5.5",
+    "react-native-maps": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
