--- a/sprint1-React_Native/projeto_VitalHub/package.json
+++ b/sprint1-React_Native/projeto_VitalHub/package.json
@@ -13,7 +13,7 @@
     "@expo-google-fonts/montserrat-alternates": "^0.2.3",
     "@expo-google-fonts/quicksand": "^0.2.3",
     "@react-native-picker/picker": "^2.6.1",
-    "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -21,18 +21,18 @@
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
     "expo-linear-gradient": "~12.7.1",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1304.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.10.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-picker-select": "^9.0.1",
     "react-native-vector-icons": "^10.0.3",
-    "styled-components": "^6.1.8",
-    "expo-location": "~16.5.5",
-    "react-native-maps": "1.10.0"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
